--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,15 +29,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   <body>
-      <div class="container-fluid" style="height: 100vh;">
-        <nav class="navbar fixed-top bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img src="https://static.thenounproject.com/png/739210-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-              Чат-центр
-            </a>
-          </div>
-        </nav>
+      <div class="container-fluid" style="height: 800px;">
+        <div class="mb-3" style="height: 60px";>
+          <nav class="navbar fixed-top bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="https://static.thenounproject.com/png/739210-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                Чат-центр
+              </a>
+            </div>
+          </nav>
+        </div>
         <div class="row mb-3 h-100 align-content-center justify-content-center">
           <div class="col h-100">
             <div id="root" class="h-100"></div>
